--- a/package.json
+++ b/package.json
@@ -12,16 +12,21 @@
     "lint": "eslint src/**"
   },
   "dependencies": {
+    "@google-cloud/storage": "^5.3.0",
+    "formidable": "^1.2.2",
     "knex": "^0.21.7",
     "next": "^9.5.5",
     "pg": "^8.4.1",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "sharp": "^0.26.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.3",
+    "@types/formidable": "^1.0.31",
     "@types/node": "^14.14.3",
     "@types/react": "^16.9.53",
+    "@types/sharp": "^0.26.0",
     "@typescript-eslint/eslint-plugin": "^4.5.0",
     "@typescript-eslint/parser": "^4.5.0",
     "eslint": "^7.12.0",
