--- a/package.json
+++ b/package.json
@@ -13,7 +13,12 @@
   },
   "dependencies": {
     "@google-cloud/storage": "^5.3.0",
+    "bcrypt": "^5.0.0",
+    "cookie": "^0.4.1",
     "formidable": "^1.2.2",
+    "generate-password": "^1.5.1",
+    "googleapis": "^62.0.0",
+    "jsonwebtoken": "^8.5.1",
     "knex": "^0.21.7",
     "next": "^9.5.5",
     "pg": "^8.4.1",
@@ -23,7 +28,10 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.3",
+    "@types/bcrypt": "^3.0.0",
+    "@types/cookie": "^0.4.0",
     "@types/formidable": "^1.0.31",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/node": "^14.14.3",
     "@types/react": "^16.9.53",
     "@types/sharp": "^0.26.0",
