--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "pg": "^8.4.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "sharp": "^0.26.2"
+    "sharp": "^0.26.2",
+    "stripe": "^8.119.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.3",
