--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   },
   "dependencies": {
     "@google-cloud/storage": "^5.3.0",
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
     "bcrypt": "^5.0.0",
     "cookie": "^0.4.1",
     "formidable": "^1.2.2",
