--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@google-cloud/storage": "^5.3.0",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
+    "axios": "^0.21.0",
     "bcrypt": "^5.0.0",
     "cookie": "^0.4.1",
     "formidable": "^1.2.2",
