--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     "pg": "^8.4.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "sharp": "^0.26.2",
     "stripe": "^8.119.0"
   },
@@ -38,6 +41,7 @@
     "@types/jsonwebtoken": "^8.5.0",
     "@types/node": "^14.14.3",
     "@types/react": "^16.9.53",
+    "@types/react-redux": "^7.1.11",
     "@types/sharp": "^0.26.0",
     "@typescript-eslint/eslint-plugin": "^4.5.0",
     "@typescript-eslint/parser": "^4.5.0",
