--- a/package.json
+++ b/package.json
@@ -21,13 +21,17 @@
     "formidable": "^1.2.2",
     "generate-password": "^1.5.1",
     "googleapis": "^62.0.0",
+    "i18next": "^19.8.3",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.21.7",
+    "moment": "^2.29.1",
     "next": "^9.5.5",
     "pg": "^8.4.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-i18next": "^11.7.3",
     "react-redux": "^7.2.2",
+    "recharts": "^1.8.5",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "sharp": "^0.26.2",
@@ -42,6 +46,7 @@
     "@types/node": "^14.14.3",
     "@types/react": "^16.9.53",
     "@types/react-redux": "^7.1.11",
+    "@types/recharts": "^1.8.16",
     "@types/sharp": "^0.26.0",
     "@typescript-eslint/eslint-plugin": "^4.5.0",
     "@typescript-eslint/parser": "^4.5.0",
