--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
     "lint": "eslint src/**"
   },
   "dependencies": {
+    "@date-io/date-fns": "1.x",
     "@google-cloud/storage": "^5.3.0",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
+    "@material-ui/pickers": "^3.2.10",
     "axios": "^0.21.0",
     "bcrypt": "^5.0.0",
     "cookie": "^0.4.1",
+    "date-fns": "^2.16.1",
     "formidable": "^1.2.2",
     "generate-password": "^1.5.1",
     "googleapis": "^62.0.0",
