--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/pickers": "^3.2.10",
+    "@stripe/stripe-js": "^1.11.0",
     "axios": "^0.21.0",
     "bcrypt": "^5.0.0",
     "cookie": "^0.4.1",
