--- a/tsconfig.json
+++ b/tsconfig.json
@@ -61,6 +61,6 @@
     "resolveJsonModule": true,
     "isolatedModules": true
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "i18n.js"],
   "exclude": ["node_modules"]
 }
