--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "knex": "^0.21.7",
     "moment": "^2.29.1",
     "next": "^9.5.5",
+    "next-i18next": "^7.0.1",
     "pg": "^8.4.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
