--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "eslint src/**"
+    "start": "next start -p $PORT",
+    "lint": "eslint src/**",
+    "test": "jest --coverage"
   },
   "dependencies": {
     "@date-io/date-fns": "1.x",
@@ -44,6 +45,9 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.3",
+    "@testing-library/dom": "^7.28.1",
+    "@testing-library/jest-dom": "^5.11.6",
+    "@testing-library/react": "^11.2.2",
     "@types/bcrypt": "^3.0.0",
     "@types/cookie": "^0.4.0",
     "@types/formidable": "^1.0.31",
@@ -55,10 +59,13 @@
     "@types/sharp": "^0.26.0",
     "@typescript-eslint/eslint-plugin": "^4.5.0",
     "@typescript-eslint/parser": "^4.5.0",
+    "babel-jest": "^26.6.3",
     "eslint": "^7.12.0",
     "eslint-config-prettier": "^6.14.0",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.21.5",
+    "jest": "^26.6.3",
+    "jest-dom": "^4.0.0",
     "prettier": "^2.1.2",
     "typescript": "^4.0.3"
   }
