--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "lint": "eslint src/**",
     "test": "jest --coverage"
   },
+  "cacheDirectories": [
+    ".next/cache"
+  ],
   "dependencies": {
     "@date-io/date-fns": "1.x",
     "@google-cloud/storage": "^5.3.0",
