--- a/package.json
+++ b/package.json
@@ -10,7 +10,16 @@
     "build": "next build",
     "start": "next start -p $PORT",
     "lint": "eslint src/**",
-    "test": "jest --coverage"
+    "test": "jest --coverage",
+    "precommit": "pretty-quick --staged && lint-staged"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "yarn lint"
+    }
+  },
+  "lint-staged": {
+    "*.ts": "eslint --cache --fix"
   },
   "cacheDirectories": [
     ".next/cache"
@@ -67,9 +76,12 @@
     "eslint-config-prettier": "^6.14.0",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.21.5",
+    "husky": "^4.3.5",
     "jest": "^26.6.3",
     "jest-dom": "^4.0.0",
+    "lint-staged": "^10.5.3",
     "prettier": "^2.1.2",
+    "pretty-quick": "^3.1.0",
     "typescript": "^4.0.3"
   }
 }
